# tetris

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  install.sh  run
include/: board.h  definitions.h  game.h  piece.h
src/: board.cpp  game.cpp  main.cpp  piece.cpp
